@@ -7,6 +7,10 @@
 This document provides a high-level view of the changes to the {project-name} by release.
 For a detailed view of what has changed, refer to the {uri-project}/commits/master[commit history] on GitHub.
 
+== Unreleased
+
+* add basic support for stem blocks
+
 == 0.5.0 (2021-03-31) - @slonopotamus
 
 * add support for `indexterm` and `intexterm2` inline macros
